# warpshell-user-template

./: .gitignore  Makefile  README.md
personas/xilinx_u55n_xdma_gen3x8_v0/axi_sum_example/: README.md  edit.tcl  impl.tcl  synth.tcl  user.tcl
personas/xilinx_u55n_xdma_gen3x8_v0/poh/: README.md  edit.tcl  synth.tcl  user.tcl
personas/xilinx_u55n_xdma_gen3x8_v1/default/: edit.tcl  user.bd
personas/xilinx_u55n_xdma_gen3x8_v2/default/: impl.tcl  synth.tcl  user.bd
personas/xilinx_u55n_xdma_gen3x8_v2/mnist/: user.bd
srcs/axi_sum_example/: .gitignore  Makefile
srcs/axi_sum_example/scripts/: csynth.tcl
srcs/axi_sum_example/vhls/: axi_sum_example.cpp
srcs/bd/xilinx_u55n_xdma_gen3x8/: impl.tcl  synth.tcl
srcs/mm2s/rtl/: mm2s.v
srcs/mm2s/tb/: Makefile  test_mm2s.py
srcs/mm2s/tb/lib/ip/: xpm_fifo.sv  xpm_memory.sv
srcs/mnist/: CMakeLists.txt  README.md
srcs/mnist/hls/: MLP.cpp  MLP.h  MLP_tb.cpp
srcs/mnist/host/mnist-host/: Cargo.toml  README.md
srcs/mnist/host/mnist-host/src/: error.rs  main.rs  mnist_core.rs  user_part.rs
srcs/mnist/scripts/: csynth.tcl  export.tcl
